After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703171 - rtph264pay: segfault because of double buffer unmap on error
rtph264pay: segfault because of double buffer unmap on error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-27 09:16 UTC by David Svensson Fors
Modified: 2013-06-27 15:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtph264pay: avoid double buffer unmap on error (928 bytes, patch)
2013-06-27 09:16 UTC, David Svensson Fors
none Details | Review

Description David Svensson Fors 2013-06-27 09:16:08 UTC
Created attachment 247877 [details] [review]
rtph264pay: avoid double buffer unmap on error

I get a segfault in gstrtph264pay.c when the call to gst_rtp_h264_pay_set_sps_pps in gst_rtp_h264_pay_setcaps fails. There is a double gst_buffer_unmap. The buffer has just been unmapped, and then it is unmapped again when we goto error at the set_sps_pps_failed label.

The attached patch is a suggested fix for this problem.
Comment 1 Wim Taymans 2013-06-27 15:15:40 UTC
commit 692206d3a743e851286bf5c272e33f535d13174f
Author: David Svensson Fors <davidsf@axis.com>
Date:   Thu Jun 27 07:40:29 2013 +0200

    rtph264pay: avoid double buffer unmap on error
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=703171