rtph264pay: avoid double buffer unmap on error

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=703171